Vision adjustment is working. Working on modifications.